<resources>
    <string name="app_name">SIBOLA</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="sign_in_button_label">Masuk</string>
    <string name="sign_up_button_label">Daftar</string>

    <string name="home">Home</string>
    <string name="profil">Profil</string>
    <string name="hai">Hai username! Deposit kamu </string>
    <string name="deposit">Rp 200.000</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="status">Kamu tidak mempunyai jadwal futsal, klik tanggal dan pilih slot jam  untuk booking jadwal</string>
    <string name="statusSlot">Pilih slot jam  untuk booking jadwal</string>
    <string name="statusList">Silahkan tandai slot yang ingin kamu booking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_signout">Sign out</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>

    <string name="action_settings">Settings</string>
    <string name="booking">Booking</string>

</resources>
