<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sibola.app.SignInActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/app_name"
            android:textColor="@color/icons"
            android:textSize="50sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />


        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/icons"
            android:hint="@string/email_hint"
            android:textColor="@color/icons"
            android:textColorHint="@color/icons" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/icons"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/icons"
            android:textColorHint="@color/icons" />

        <Button
            android:id="@+id/buttonMasuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="15dp"
            android:background="@color/primary"
            android:text="@string/sign_in_button_label"
            android:textColor="@color/icons"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:text="@string/sign_up_button_label"
            android:textColor="@color/icons"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>
